syntax = "proto3";

option go_package="github.com/mohitkumar/api_v1";

message UUID{
    bytes id = 1;
}

message FlowContext{
    UUID id = 1;
    string name = 2;
    string currentState =3;
    uint64 currentAction= 4;
    map<string,string> data = 5;
    uint64 ttl = 6;
}


message Flow{
    string name = 1;
    string startState =2;
    map<string,Action> statesMap = 3;
    map<string,string> data = 4;
}

message Parameter{
    bytes key = 1;
    bytes value =2;
}

message Action{
    uint64 id = 1;
    bytes name = 2;
    repeated Parameter inputParameters = 3;
    repeated Parameter outputParameters = 4;
}

message FlowCreateRequest{
    Flow flow = 1;
}

message FlowCreateResponse{
    enum Status{
        SUCCESS = 0;
        FAILED = 1;
    }
    Status status = 1;
}

message Server {
    string id = 1;
    string rpc_addr = 2;
    bool is_leader = 3;
}

message GetServersRequest {}

message GetServersResponse {
  repeated Server servers = 1;
}

service Coordinator{
    rpc CreateFlow(FlowCreateRequest) returns (FlowCreateResponse){}
    rpc GetServers(GetServersRequest) returns (GetServersResponse) {}
}